# comfyui-materia

./: .gitignore  CONTRIBUTING.md  CleanGeneralDIT.py  CleanVAE.py  README.md  diffusion_renderer_config.py  diffusion_renderer_pipeline.py  install.bat  install.py  install.sh  model_diffusion_renderer.py  nodes.py  preprocess_envmap.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish_registry.yml
dev/: update-workflow.sh
docs/: BUILD_AND_VERIFICATION.md  CHANGELOG.md  TROUBLESHOOTING-WINDOWS.md
examples/: materia_pipeline.json
tests/: __init__.py  test_comfyui_integration.py  test_imports.py  test_install.py
